# fpl-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  test_login.py
data/: bootsrap_data.json  bootstrap_data.json  fixtures.json
src/fpl_server/: auth.py  cache.py  client.py  main.py  mcp_prompts.py  mcp_resources.py  mcp_tools.py  models.py  rotowire_scraper.py  state.py  web.py
