[project]
name = "fpl-mcp-server"
version = "0.1.0"
description = "Secure FPL MCP Server with OOB Authentication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fpl_server"]